fixed alignment on table header buttons

--- a/concept2logbookhelper.client/src/css/ResultTableHeader.css
+++ b/concept2logbookhelper.client/src/css/ResultTableHeader.css
@@ -1,3 +1,10 @@
+.FilterHeader {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    gap: 0.1rem;
+}
+
 .PopupDisabler {
     position: fixed;
     width: 100%;
